<resources>

    <string name="app_name">ApplicationEbay</string>

    <string name="connexion_tv_login">Login</string>
    <string name="connexion_tv_motdepasse">Mot de passe</string>
    <string name="connexion_btn_connexion">Connexion</string>
    <string name="connexion_btn_sinscrire">S\'inscrire</string>

    <string name="compte_tv_mail">Adresse mail</string>
    <string name="compte_tv_nom">Nom</string>
    <string name="compte_tv_prenom">Prenom</string>
    <string name="compte_tv_login">Login</string>
    <string name="compte_tv_motdepasse">Mot de passe</string>
    <string name="compte_tv_adresse">Adresse</string>
    <string name="compte_tv_photoprofil">Photo de profil</string>
    <string name="compte_btn_enregistrer">Enregistrer</string>

    <string name="title_activity_accueil">Accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="accueil_tv_listeannonces">Liste des annonces :</string>
    <string name="accueil_it_ajouteruneannonce">Ajouter une annonce</string>
    <string name="accueil_it_mesannonces">Mes annonces</string>
    <string name="accueil_it_mesencheres">Mes encheres</string>
    <string name="accueil_it_mesrdv">Mes rendez-vous</string>
    <string name="accueil_it_modifiermoncompte">Modifier mon compte</string>
    <string name="accueil_it_deconnection">Déconnection</string>
    <string name="accueil_it_encours">En cours</string>
    <string name="accueil_it_termine">Terminé</string>
    <string name="accueil_it_compte">Compte</string>

    <string name="ajouterannonce_tv_nom">Nom du bien</string>
    <string name="ajouterannonce_tv_description">Description</string>
    <string name="ajouterannonce_tv_prix">Prix planché</string>
    <string name="ajouterannonce_tv_photobien">Photo du bien</string>
    <string name="ajouterannonce_btn_enregistrer">Enregistrer</string>

    <string name="liste_mes_annonces_tv_listeannonces">Mes annonces :</string>

    <string name="liste_mes_encheres_tv_listeannonces">Mes encheres :</string>

    <string name="liste_mes_rdv_tv_listeannonces">Mes rendez-vous :</string>

    <string name="annonce_tv_nom">Nom du bien</string>
    <string name="annonce_tv_description">Description</string>
    <string name="annonce_tv_prix">Prix planché</string>
    <string name="annonce_tv_photobien">Photo du bien</string>
    <string name="annonce_tv_derniere_enchere">Derniere enchère</string>
    <string name="annonce_tv_encherir">Nouvelle enchère</string>
    <string name="annonce_btn_encherir">Encherir</string>
    <string name="annonce_tv_rdv">Date/heure de rendez-vous</string>
    <string name="annonce_btn_rdv">Fixer un rendez-vous</string>
    <string name="annonce_btn_rdvannuler">Refuser un rendez-vous</string>
    <string name="annonce_btn_rdvcofirmer">Confirmer un rendez-vous</string>

</resources>
